# safetydrift

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
safetydrift/: __init__.py  __main__.py  classifier.py  compare_classifiers.py  drift_types.py  integrations.py  llm_classifier.py  markov.py  mcp_server.py  policy.py  session.py  store.py
safetydrift.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
safetydrift/benchmark/: __init__.py  benchmark_results.json  run.py  runner.py  trace_generator.py
tests/: test_safetydrift.py
