[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "safetydrift"
version     = "0.1.0"
description = "Safety drift prediction for AI agents — the first open-source implementation of the SafetyDrift framework (arXiv:2603.27148)"
readme      = "README.md"
license     = {text = "MIT"}
requires-python = ">=3.10"

keywords = [
  "ai-safety", "llm-agents", "mcp", "drift-detection",
  "model-context-protocol", "agentic-ai", "guardrails",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.urls]
Homepage    = "https://github.com/YOUR_USERNAME/driftguard"
Paper       = "https://arxiv.org/abs/2603.27148"
Issues      = "https://github.com/YOUR_USERNAME/driftguard/issues"

[project.scripts]
driftguard-mcp = "driftguard.mcp_server:run_stdio"

[tool.setuptools.packages.find]
where = ["."]
include = ["driftguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
